<resources>
    <string name="app_name">App_002</string>
    <string name="txt_hint_primerValor">Ingrese la base</string>
    <string name="txt_hint_segundoValor">Ingrese el exponente</string>
    <string name="txt_hint_resultado">Resultado</string>
    <string name="btn_potencia">Potencia</string>
    <string name="btn_Salir">Salir</string>


    <string name="txt_hint_usuario">Digite el Usuario</string>
    <string name="txt_hint_clave">Digite la Clave</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="btn_Mosxtrar_Activitie">Monstrar Activitie</string>

    <string name="btn_Llamar">Llamar</string>
    <string name="btn_navegador">Mostrar navegador</string>

    <string name="btn_final_app">Finalizar</string>

    <string name="menu_agregar">Agregar</string>
    <string name="menu_archivo">Archivo</string>
    <string name="menu_acercade">Acerca de</string>

    <string name="menu_editar">Editar</string>
    <string name="menu_cortar">Cortar</string>
    <string name="menu_copiar">Copiar</string>
    <string name="menu_pegar">Pegar</string>

    <string name="txt_codigo">Ingrese el codigo</string>
    <string name="txt_nombre">Ingrese el nombre</string>
    <string name="txt_apellido">Ingrese el apellido</string>
    <string name="txt_saldo">Ingrese el saldo</string>

    <string name="btn_Insertar">Insertar</string>
    <string name="btn_Borrar">Borrar</string>
    <string name="btn_Modificar">Modificar</string>
    <string name="btn_Buscar">Buscar</string>
    <string name="btn_Mostrar_Clientes">Mostrar Clientes</string>





</resources>